# VID_SIP

./: .gitignore  README.md
planner_node/: CMakeLists.txt  package.xml
planner_node/include/planner_node/: AGPSolver.h  Planner.h  PolygonObject.h  PolygonObject.hpp  PreProcess.h  Region.h  State.h  System.h  TSP.h  plan.hpp
planner_node/launch/: planner_node.launch
planner_node/rviz/: SIPsetup.rviz
planner_node/settings/: robdekon.yaml
planner_node/src/: AGPSolver.cpp  Planner.cpp  PolygonObject.cpp  PreProcess.cpp  Region.cpp  State.cpp  System.cpp  TSP.cpp  plan.cpp  test.cpp
request_client_node/: CMakeLists.txt  package.xml
request_client_node/include/request_client_node/: Request.h
request_client_node/meshes/: house_100.stl  house_100_withBaseTriangles.stl  house_500.stl  pillar_1000.stl  pillar_50.stl  pillar_500.stl  robdekon.stl  school_500.stl
request_client_node/src/: Request.cpp  planner_request_client.cpp
